--- a/TaskMaster/app/src/main/AndroidManifest.xml
+++ b/TaskMaster/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TaskMaster">
         <activity
+            android:name=".SettingsPage"
+            android:exported="true" />
+        <activity
+            android:name=".TaskDetailPage"
+            android:exported="true" />
+        <activity
             android:name=".AllTasks"
             android:exported="true" />
         <activity
