--- a/TaskMaster/app/build.gradle
+++ b/TaskMaster/app/build.gradle
@@ -28,6 +28,9 @@ android {
 }
 
 dependencies {
+//Auth dependencies
+    implementation 'com.amplifyframework:aws-auth-cognito:1.24.0'
+
     implementation 'com.amplifyframework:aws-api:1.24.0'
     implementation 'com.amplifyframework:aws-datastore:1.24.0'
         implementation 'com.amplifyframework:core:1.24.0'
