--- a/TaskMaster/app/build.gradle
+++ b/TaskMaster/app/build.gradle
@@ -28,13 +28,15 @@ android {
 }
 
 dependencies {
+    implementation 'com.amplifyframework:aws-storage-s3:1.24.0'
+//    implementation 'com.amplifyframework:aws-auth-cognito:1.24.0'
 //Auth dependencies
     implementation 'com.amplifyframework:aws-auth-cognito:1.24.0'
 
     implementation 'com.amplifyframework:aws-api:1.24.0'
     implementation 'com.amplifyframework:aws-datastore:1.24.0'
-        implementation 'com.amplifyframework:core:1.24.0'
-        implementation 'com.amplifyframework:aws-api:1.24.0'
+    implementation 'com.amplifyframework:core:1.24.0'
+    implementation 'com.amplifyframework:aws-api:1.24.0'
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
