--- a/TaskMaster/app/build.gradle
+++ b/TaskMaster/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
 }
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdk 31
 
@@ -28,6 +30,31 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:28.2.1')
+    implementation 'com.google.firebase:firebase-messaging'
+
+    implementation 'com.amazonaws:aws-android-sdk-pinpoint:2.25.+'
+    implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.26.+@aar') { transitive = true }
+    // Import the Firebase BoM
+
+    implementation platform('com.google.firebase:firebase-bom:28.4.0')
+
+
+    // Add the dependency for the Firebase SDK for Google Analytics
+
+    // When using the BoM, don't specify versions in Firebase dependencies
+
+    implementation 'com.google.firebase:firebase-analytics'
+
+
+    // Add the dependencies for any other desired Firebase products
+
+    // https://firebase.google.com/docs/android/setup#available-libraries
+
     implementation 'com.amplifyframework:aws-storage-s3:1.24.0'
 //    implementation 'com.amplifyframework:aws-auth-cognito:1.24.0'
 //Auth dependencies
